# aureum-dao

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml
app/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.js
app-ts/: index.html  package-lock.json  package.json  pnpm-lock.yaml
app-ts/src/: App.tsx
app-ts/src/components/AllProposals/: AllProposals.tsx
app-ts/src/components/FormPage/: FormPage.tsx
app-ts/src/components/Hero/: Hero.tsx
app-ts/src/components/Home/: Home.tsx
app-ts/src/components/LandingPage/: LandingPage.tsx
app-ts/src/components/Navbar/: Navbar.tsx
app-ts/src/components/Proposals/: Modal.tsx  Proposals.tsx
app-ts/src/components/popup/: popup.tsx
app-ts/src/config/: config.ts
app-ts/src/types/: index.ts
app-ts/src/utils/: verifier.ts  wallet.ts
app/src/: App.jsx  index.css  main.jsx
app/src/components/: Wallet.jsx  config.js  util.jsx
app/src/components/FormPage/: FormPage.jsx
app/src/components/Hero/: Connection.jsx  Hero.jsx
app/src/components/Home/: Home.jsx
app/src/components/LandingPage/: LandingPage.jsx
app/src/components/Modal/: Modal.jsx  modal.css
app/src/components/Navbar/: Navbar.jsx
app/src/components/Proposals/: Modal.jsx  Proposals.jsx
app/src/components/Testimonials/: Testimonials.jsx
app/src/config/: config.js  config.ts
app/src/utils/: verifier.js  verifier.ts  wallet.js  wallet.ts
client/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
client/src/components/AllProposals/: AllProposals.tsx
client/src/components/FormPage/: FormPage.tsx
client/src/components/Hero/: Hero.tsx
client/src/components/LandingPage/: LandingPage.tsx
client/src/components/Modal/: Modal.tsx
client/src/components/Navbar/: Navbar.tsx
client/src/components/Proposals/: Modal.tsx  Proposals.tsx
client/src/components/popup/: popup.tsx
client/src/config/: config.ts
client/src/types/: index.ts
client/src/utils/: types.ts  verifier.ts  wallet.ts
contract/: Cargo.toml
contract/deploy-scripts/: Cargo.toml
contract/deploy-scripts/src/: main.rs
contract/src/: lib.rs
contract/tests/: tests.rs
server/: Cargo.toml
server/config/: statement.json
server/src/: handlers.rs  main.rs  types.rs
