[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["add-extension", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3"
serde_json = "1.0"
tower = { version = "0.4", features = ["util"] }
