[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.7.0"
concordium-rust-sdk = "4.2.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = {version = "0.10", features = ["tls", "tls-roots"]}
tower-http = { version = "0.5.0", features = ["add-extension", "cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3"
tower = { version = "0.4", features = ["util"] }
